2005-06-29  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: SyslogFacility shouldn't be [Flags] either.  Sigh.
	  Thanks to Vorobiev Maksim for pointing this out.
	* make-map.cs: Don't generate conversion code for [Obsolete] enum members.
	  This assumes that (1) the enum member's value is invalid, or (2) a
	  corrected member with the same value exists.  This fix allows us to
	  obsolete invalid members (instead of removing them) without screwing up
	  the generated code -- consider LOG_USRE, the mis-spelling of LOG_USER.
	  Since SyslogFacility was (incorrectly) a [Flags] enum, since both LOG_USER
	  and LOG_USRE had the same value, we'd get a EINVAL error trying to convert
	  a valid value, since LOG_USRE would exist, would be checked for, and the
	  check would succeed (since it had the same value as LOG_USER).
	  This change allows us to be slightly more permissive with versioning.

2005-06-28  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: correct value of LOG_CRON (it shouldn't be identical to
	  LOG_UUCP).  SyslogLevel shouldn't have [Flags].  Move LOG_USER to be
	  before LOG_USRE so that the generated map code doesn't return EINVAL when
	  LOG_USER is specified.

2005-06-15  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: s/LOG_USRE/LOG_USER/.  Fixes #75274.  
	  Thanks to Martin Honermeyer.

2005-06-09  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Look for [Obsolete] members, and mark the UnixConvert
	  conversion functions with the same [Obsolete] message.  This should permit
	  more graceful deprecation of enumerations in the future (rather than just
	  API breaks).

2005-06-08  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Add execvp(2).  (This should have been added with the other
	  exec(2) additions...).

2005-06-08  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Update comment with correct exception type.
	* UnixConvert.cs: Rename ToFilePermissions(string) to
	  FromOctalPermissionString; Add ToOctalPermissionString,